--- a/project/views/editpreferences.ejs
+++ b/project/views/editpreferences.ejs
@@ -77,12 +77,12 @@
                 <p style="float: left;">
                   <select id="addedCategory" name="addedCategory">
                     <option value=""></option>
-                    <option value="italian">Italian</option>
-                    <option value="asian">Asian</option>
-                    <option value="mexican">Mexican</option>
-                    <option value="indian">Indian</option>
-                    <option value="american">American</option>
-                    <option value="mediterranean">Mediterranean</option>
+                    <option value="Italian">Italian</option>
+                    <option value="Asian">Asian</option>
+                    <option value="Mexican">Mexican</option>
+                    <option value="Indian">Indian</option>
+                    <option value="American">American</option>
+                    <option value="Mediterranean">Mediterranean</option>
                   </select>
                 </p>
 
