--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -47,7 +47,7 @@
                   GUARANTEED!
                 </strong>
               </h1>
-              <form
+              <!--<form
                 class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center mt-5 mb-5"
               >
                 <input
@@ -61,14 +61,167 @@
                 >
                   Search for Noms
                 </button>
-              </form>
+              </form>-->
             </div>
           </div>
         </div>
       </div>
     </header>
-    <section id="explore-section" class="text-muted py-5"></section>
+
+    <section id="showcase">
+      <div id="carousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel" data-slide-to="1" class="active"></li>
+          <li data-target="#carousel" data-slide-to="2" class="active"></li>
+          <li data-target="#carousel" data-slide-to="3" class="active"></li>
+          <li data-target="#carousel" data-slide-to="4" class="active"></li>
+          <li data-target="#carousel" data-slide-to="5" class="active"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item carousel-image-asian active">
+            <div class="container">
+              <div
+                class="carousel-caption d-none d-sm-block text-right mb-5 text-center"
+              >
+                <h1 class="display-1">Asian</h1>
+                <p class="lead">
+                  Get the best Asian food around!
+                </p>
+                <a
+                  href="/asian"
+                  class="btn btn-lg"
+                  style="background-color: red; color: #ffd700;"
+                  >Get Restaurants!</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item carousel-image-italian">
+            <div class="container">
+              <div class="carousel-caption d-none d-sm-block mb-5 text-center">
+                <h1 class="display-1">Italian</h1>
+                <p class="lead">
+                  Get the best Italian food around!
+                </p>
+                <a
+                  href="/italian"
+                  class="btn btn-lg"
+                  style="background-color: red; color: #ffd700;"
+                  >Get Restaurants!</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item carousel-image-indian">
+            <div class="container">
+              <div class="carousel-caption d-none d-sm-block mb-5 text-center">
+                <h1 class="display-1">Indian</h1>
+                <p class="lead">
+                  Get the best Indian food around!
+                </p>
+                <a
+                  href="/indian"
+                  class="btn btn-lg"
+                  style="background-color: red; color: #ffd700;"
+                  >Get Restaurants!</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item carousel-image-mediterranean">
+            <div class="container">
+              <div class="carousel-caption d-none d-sm-block mb-5">
+                <h1 class="display-1">
+                  Mediterranean
+                </h1>
+                <p class="lead">
+                  Get the best Mediterranean food around!
+                </p>
+                <a
+                  href="/mediterranean"
+                  class="btn btn-lg"
+                  style="background-color: red; color: #ffd700;"
+                  >Get Restaurants!</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item carousel-image-american">
+            <div class="container">
+              <div class="carousel-caption d-none d-sm-block mb-5 text-center">
+                <h1 class="display-1">American</h1>
+                <p class="lead">
+                  Get the best American food around!
+                </p>
+                <a
+                  href="/american"
+                  class="btn btn-lg"
+                  style="background-color: red; color: #ffd700;"
+                  >Get Restaurants!</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item carousel-image-mexican">
+            <div class="container">
+              <div
+                class="carousel-caption d-none d-sm-block text-right mb-5 text-center"
+              >
+                <h1 class="display-1">Mexican</h1>
+                <p class="lead">
+                  Get the best Mexican food around!
+                </p>
+                <a
+                  href="/mexican"
+                  class="btn btn-lg"
+                  style="background-color: red; color: #ffd700;"
+                  >Get Restaurants!</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <a href="#carousel" data-slide="prev" class="carousel-control-prev">
+          <span class="carousel-control-prev-icon"></span>
+        </a>
+
+        <a href="#carousel" data-slide="next" class="carousel-control-next">
+          <span class="carousel-control-next-icon"></span>
+        </a>
+      </div>
+    </section>
+
     <!-- FOOTER -->
     <%- include("./partials/footer.ejs") %>
   </body>
 </html>
+
+<script
+  src="http://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+  integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+  crossorigin="anonymous"
+></script>
+
+<script>
+  $(".carousel").carousel({
+    interval: 6000,
+    pause: "hover",
+  });
+</script>
