--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -47,6 +47,10 @@
                   GUARANTEED!
                 </strong>
               </h1>
+
+              <h1 class="display-4 text-center">
+                <img src="../public/img/rSedLogo.png" type="image/icon type" />
+              </h1>
               <!--<form
                 class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center mt-5 mb-5"
               >
