--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -72,7 +72,7 @@
       </div>
     </header>
 
-    <section id="showcase">
+    <section id="carousel">
       <div id="carousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carousel" data-slide-to="0" class="active"></li>
