--- a/project/views/restaurantprofile.ejs
+++ b/project/views/restaurantprofile.ejs
@@ -24,7 +24,7 @@
 
 <body>
   <%- include("./partials/header.ejs") %>
-  <header id="home-section">
+  <header id="rest-profile">
     <div class="dark-overlay">
       <h1 align="center" style="padding-top: 75px; color: #ffd700;">
         <b>
@@ -157,6 +157,7 @@
     </div>
     <% }; %>
   </header>
+  
   <%- include("./partials/footer.ejs") %>
 </body>
 
