--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -50,7 +50,15 @@ body {
   background-size: cover;
   background-attachment: fixed;
   min-height: 1200px;
+
 }
+#rest-profile .dark-overlay {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+}
+
 
 #rest-profile .home-inner {
   padding-top: 100px;
