--- a/project/views/restaurantprofile.ejs
+++ b/project/views/restaurantprofile.ejs
@@ -26,11 +26,10 @@
   <%- include("./partials/header.ejs") %>
   <header id="rest-profile">
     <div class="dark-overlay">
-      <h1 align="center" style="padding-top: 75px; color: #ffd700;">
+      <h1 align="center" style="padding-top: 75px; color: white">
         <b>
           <u>
             <%=restaurant.name%>
-
           </u>
         </b>
       </h1>
@@ -50,7 +49,6 @@
           <% } %>
         </b>
       </h2>
-
 
       <h3 align="center" ; style="padding-top: 5px;">
         <i>
@@ -92,14 +90,6 @@
           Leave Review
         </a>
       </h1>
-      <!--
-      <p>
-        <% restaurant.reviews.forEach(function(review) { %>
-          <%=review.author.firstName%> <%=review.author.lastName%> - <%=review.comment%>
-          <br>
-        <% } ); %>
-      </p>
-      -->
       <% var number_in_row = 0 %>
       <%if(restaurant.reviews.length == 0){ %>
       <h1 align="center" style="padding-top: 50px; color: #ff0000;">
