--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -50,13 +50,13 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  min-height: 1200px;
+  min-height: 100%;
 
 }
 #rest-profile .dark-overlay {
   position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background: rgba(0, 0, 0, 0.7);
 }
 
