--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -193,11 +193,11 @@
         </div>
 
         <a href="#carousel" data-slide="prev" class="carousel-control-prev">
-          <span class="carousel-control-prev-icon"></span>
+          <!--<span class="carousel-control-prev-icon"></span>-->
         </a>
 
         <a href="#carousel" data-slide="next" class="carousel-control-next">
-          <span class="carousel-control-next-icon"></span>
+          <!--<span class="carousel-control-next-icon"></span>-->
         </a>
       </div>
     </section>
@@ -225,7 +225,7 @@
 
 <script>
   $(".carousel").carousel({
-    interval: 5000,
+    interval: 4000,
     pause: "hover",
   });
 </script>
