push it real good

--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -72,7 +72,7 @@
       </div>
     </header>
 
-    <section id="carousel">
+    <section id="kewlcarousel">
       <div id="carousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carousel" data-slide-to="0" class="active"></li>
@@ -83,121 +83,109 @@
           <li data-target="#carousel" data-slide-to="5" class="active"></li>
         </ol>
         <div class="carousel-inner">
-          <div class="carousel-item carousel-image-asian active">
-            <div class="container">
-              <div
-                class="carousel-caption d-none d-sm-block text-right mb-5 text-center"
+          <div class="carousel-item active carousel-image-asian">
+            <div
+              class="carousel-caption d-none d-sm-block text-right mb-5 text-center"
+            >
+              <h1 class="display-1">Asian</h1>
+              <p class="lead">
+                Get the best Asian food around!
+              </p>
+              <a
+                href="/asian"
+                class="btn btn-lg"
+                style="background-color: red; color: #ffd700;"
+                >Get Restaurants!</a
               >
-                <h1 class="display-1">Asian</h1>
-                <p class="lead">
-                  Get the best Asian food around!
-                </p>
-                <a
-                  href="/asian"
-                  class="btn btn-lg"
-                  style="background-color: red; color: #ffd700;"
-                  >Get Restaurants!</a
-                >
-              </div>
             </div>
           </div>
 
           <div class="carousel-item carousel-image-italian">
-            <div class="container">
-              <div class="carousel-caption d-none d-sm-block mb-5 text-center">
-                <h1 class="display-1">Italian</h1>
-                <p class="lead">
-                  Get the best Italian food around!
-                </p>
-                <a
-                  href="/italian"
-                  class="btn btn-lg"
-                  style="background-color: red; color: #ffd700;"
-                  >Get Restaurants!</a
-                >
-              </div>
+            <div class="carousel-caption d-none d-sm-block mb-5 text-center">
+              <h1 class="display-1">Italian</h1>
+              <p class="lead">
+                Get the best Italian food around!
+              </p>
+              <a
+                href="/italian"
+                class="btn btn-lg"
+                style="background-color: red; color: #ffd700;"
+                >Get Restaurants!</a
+              >
             </div>
           </div>
 
           <div class="carousel-item carousel-image-indian">
-            <div class="container">
-              <div class="carousel-caption d-none d-sm-block mb-5 text-center">
-                <h1 class="display-1">Indian</h1>
-                <p class="lead">
-                  Get the best Indian food around!
-                </p>
-                <a
-                  href="/indian"
-                  class="btn btn-lg"
-                  style="background-color: red; color: #ffd700;"
-                  >Get Restaurants!</a
-                >
-              </div>
+            <div class="carousel-caption d-none d-sm-block mb-5 text-center">
+              <h1 class="display-1">Indian</h1>
+              <p class="lead">
+                Get the best Indian food around!
+              </p>
+              <a
+                href="/indian"
+                class="btn btn-lg"
+                style="background-color: red; color: #ffd700;"
+                >Get Restaurants!</a
+              >
             </div>
           </div>
 
           <div class="carousel-item carousel-image-mediterranean">
-            <div class="container">
-              <div class="carousel-caption d-none d-sm-block mb-5">
-                <h1 class="display-1">
-                  Mediterranean
-                </h1>
-                <p class="lead">
-                  Get the best Mediterranean food around!
-                </p>
-                <a
-                  href="/mediterranean"
-                  class="btn btn-lg"
-                  style="background-color: red; color: #ffd700;"
-                  >Get Restaurants!</a
-                >
-              </div>
+            <div class="carousel-caption d-none d-sm-block mb-5">
+              <h1 class="display-1">
+                Mediterranean
+              </h1>
+              <p class="lead">
+                Get the best Mediterranean food around!
+              </p>
+              <a
+                href="/mediterranean"
+                class="btn btn-lg"
+                style="background-color: red; color: #ffd700;"
+                >Get Restaurants!</a
+              >
             </div>
           </div>
 
           <div class="carousel-item carousel-image-american">
-            <div class="container">
-              <div class="carousel-caption d-none d-sm-block mb-5 text-center">
-                <h1 class="display-1">American</h1>
-                <p class="lead">
-                  Get the best American food around!
-                </p>
-                <a
-                  href="/american"
-                  class="btn btn-lg"
-                  style="background-color: red; color: #ffd700;"
-                  >Get Restaurants!</a
-                >
-              </div>
+            <div class="carousel-caption d-none d-sm-block mb-5 text-center">
+              <h1 class="display-1">American</h1>
+              <p class="lead">
+                Get the best American food around!
+              </p>
+              <a
+                href="/american"
+                class="btn btn-lg"
+                style="background-color: red; color: #ffd700;"
+                >Get Restaurants!</a
+              >
             </div>
           </div>
 
           <div class="carousel-item carousel-image-mexican">
-            <div class="container">
-              <div
-                class="carousel-caption d-none d-sm-block text-right mb-5 text-center"
+            <div
+              class="carousel-caption d-none d-sm-block text-right mb-5 text-center"
+            >
+              <h1 class="display-1">Mexican</h1>
+              <p class="lead">
+                Get the best Mexican food around!
+              </p>
+              <a
+                href="/mexican"
+                class="btn btn-lg"
+                style="background-color: red; color: #ffd700;"
+                >Get Restaurants!</a
               >
-                <h1 class="display-1">Mexican</h1>
-                <p class="lead">
-                  Get the best Mexican food around!
-                </p>
-                <a
-                  href="/mexican"
-                  class="btn btn-lg"
-                  style="background-color: red; color: #ffd700;"
-                  >Get Restaurants!</a
-                >
-              </div>
             </div>
           </div>
         </div>
 
         <a href="#carousel" data-slide="prev" class="carousel-control-prev">
-          <!--<span class="carousel-control-prev-icon"></span>-->
+          <span class="carousel-control-prev-icon"></span>
         </a>
 
         <a href="#carousel" data-slide="next" class="carousel-control-next">
-          <!--<span class="carousel-control-next-icon"></span>-->
+          <span class="carousel-control-next-icon"></span>
         </a>
       </div>
     </section>
