--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -95,10 +95,16 @@
                   Food Preferences
                 </h2>
 
-                <a type="button" href="/editpreferences" class="btn" style="
-                      background-color: green;
-                      color: white;
-                      font-weight: bold;">
+                <a
+                  type="button"
+                  href="/editpreferences"
+                  class="btn"
+                  style="
+                    background-color: green;
+                    color: white;
+                    font-weight: bold;
+                  "
+                >
                   Edit Preferences
                 </a>
 
