psuh it real good

--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -209,6 +209,12 @@ a.thumbnail:focus {
   column-count: 3;
   column-gap: 20px;
 }
+
+.restcols {
+  column-count: 2;
+  column-gap: 20px;
+}
+
 .box {
   -webkit-column-break-inside: avoid;
   page-break-inside: avoid;
@@ -217,8 +223,6 @@ a.thumbnail:focus {
   margin-bottom: 20px;
   height: 250px;
   width: 400px;
-  max-height: 100%;
-  max-width: 100%;
 
   background: red;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
