--- a/project/views/restaurantprofile.ejs
+++ b/project/views/restaurantprofile.ejs
@@ -66,22 +66,25 @@
        </b>
       </h1>
       <% restaurant.menus.forEach(function(menu) { %>
-      <div class="restcols">
+      <div align="center" class="restcols">
         <% menu.menuItems.forEach(function(menuItem) { %>
         <div class="box">
           <a href="/itemconfirm/<%=restaurant._id%>/<%=menuItem._id%>" style="text-decoration: none;">
             <img src="<%=menuItem.image%>" alt="<%=menuItem.name%>" class="image" />
             <div class="name">
-              <p style="color: #ffffff;">
-                <%=menuItem.name%> / $<%=menuItem.price%>.00
-              </p>
+              <span class="n" style="color: #ffffff;">
+                <%=menuItem.name%>
+              </span>
+              <span class="price" style="color: #ffffff;">
+                $<%=menuItem.price%>.00
+              </span>
             </div>
           </a>
         </div>
         <% } ); %>
       </div>
       <% } ); %>
-      <h1 align="center" style="padding-bottom: 10px;padding-top: 75px; color: #ffd700;">
+      <h1 align="center" style="padding-bottom: 10px; padding-top: 20px; color: #ffd700;">
         <b>
           <u>Reviews</u>          
         </b>
