--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -40,7 +40,15 @@
         <div class="home-inner container">
           <div class="row">
             <div class="d-lg-block">
-              <h1 class="display-4 text-center">
+              <h1 class="display-2 text-center">
+                <strong>
+                  OmNom Food Delivery
+                </strong>
+              </h1>
+              <h1 class="text-center">
+                <img src="../public/img/rSedLogo.png" type="image/icon type" />
+              </h1>
+              <h1 class="display-6 text-center">
                 Delivering food from <strong>ALL</strong> of your favorite
                 resturants,
                 <strong>
@@ -48,9 +56,6 @@
                 </strong>
               </h1>
 
-              <h1 class="display-4 text-center">
-                <img src="../public/img/rSedLogo.png" type="image/icon type" />
-              </h1>
               <!--<form
                 class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center mt-5 mb-5"
               >
