--- a/project/views/orderhistory.ejs
+++ b/project/views/orderhistory.ejs
@@ -33,7 +33,7 @@
 
   <body>
     <%- include("./partials/header.ejs") %>
-    <header style="padding-top: 100px;">
+    <header>
       <div class="dark-overlay">
         <div class="home-inner container">
           <div class="row" style="justify-content: center;">
