--- a/project/views/checkoutConfirmation.ejs
+++ b/project/views/checkoutConfirmation.ejs
@@ -27,6 +27,10 @@
 
     <!-- rSed Title Icon -->
     <link rel="icon" href="../public/img/rSedLogo.png" type="" />
+
+    <script>function printButton() {
+      window.print();
+    }</script>
   </head>
 
   <!-- Body -->
@@ -34,7 +38,7 @@
   <body>
     <%- include("./partials/header.ejs") %>
 
-    <div style="padding-top: 75px; text-align: center;">
+    <div style="padding-bottom: 20px; padding-top: 75px; text-align: center;">
       <h1 class="display-2" style="font-weight: bold; color: #ffd700">
         Thank you for your order!
       </h1>
@@ -43,7 +47,7 @@
         Your Receipt:
       </h2>
 
-      <div align="center" style="padding-top: 20px;">
+      <div align="center" style="padding-top: 20px; ">
         <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3" >
           <h1 class="h6">Date: <%=moment(order.date).format('MMMM Do YYYY, h:mm a')%></h1>     
           <h2 class="h6">Order Number:  <span id="random"></span> </h2>        
@@ -76,8 +80,17 @@
             </div>         
         </div>         
       </div>
-    </div>
 
+      <button class="btn btn-primary hidden-print"  onclick="printButton()">      
+        <span class="glyphicon glyphicon-print" aria-hidden="true"></span> Print Receipt
+      </button>
+    </div>
+    
+  
     <%- include("./partials/footer.ejs") %>
   </body>
 </html>
+
+<script>
+  document.getElementById("random").innerHTML = Math.floor(Math.random() * 1000000);
+</script>
