--- a/project/views/partials/footer.ejs
+++ b/project/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer id="main-footer" class="bg-dark">
-  <div class="container">
+  <div align="center">
     <div class="row-sm-2 row-md-8 row-lg-10 row-xl-14">
       <div class="col-sm-2 col-md-8 col-lg-10 col-xl-14 text-center py-2">
         <div class="row" style="padding-top: 10px; padding-bottom: 15px">
@@ -9,7 +9,6 @@
           <div class="col font-weight-bold" style="font-size: 20px">
             Account
           </div>
-
           <div class="w-100" style="padding-top: 5px"></div>
           <div class="col">
             <a href="https://sites.google.com/view/rsed/" style="color: white;">About Us</a>
@@ -24,9 +23,9 @@
           </div>
           <% } %>
         </div>
-        <div class="row" style="padding-bottom: 15px">
+        <div align="center" style="padding-bottom: 15px">
           <a href="/">
-            <img src="/public/img/rSedLogo.png" style="width: 30px; height: 30px" />
+            <img src="/public/img/rSedLogo.png" style="width: 30px; height: 30px"/>
           </a>                     
           <a style="color:grey">
             <span class="mr-3" style="font-size: 12px; padding-left:5px">&#169 2020 rSed</span>
