--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -33,111 +33,61 @@
 
   <body>
     <%- include("./partials/header.ejs") %>
-    <header id="profile-section">
-      <div class="shamelessly-copied-dark-overlay">
-        <div class="profile-inner-thing container" style="padding-top: 100px;">
-          <div class="row">
-            <div class="d-lg-block">
-              <div class="container">
-                <a
-                  class="btn btn-outline-light mx-2"
-                  href="/editprofile/<%=currentUser._id%> "
-                  role="button"
-                  sty
-                  style="
-                    position: absolute;
-                    top: 7%;
-                    right: 24.7%;
-                    height: 40px;
-                    width: 105px;
-                    text-align: center;
-                  "
-                >
-                  Edit Profile
-                </a>
-                <a
-                  class="btn btn-outline-light mx-2"
-                  href="/orderhistory"
-                  role="button"
-                  sty
-                  style="
-                    position: absolute;
-                    top: 7%;
-                    right: 35%;
-                    height: 40px;
-                    width: 130px;
-                    text-align: center;
-                  "
-                >
-                  Order History </a
-                ><br />
-                <img
-                  class="user"
-                  src="<%= user.image %>"
-                  height="150"
-                  width="200"
-                />
-                <h1 style="color: #ffd700;">
-                  <%=user.firstName%> <%=user.lastName%>
-                </h1>
-                <h3 class="font-weight-italics" style="color: white;">
-                  Email: <%= user.email %>
-                </h3>
-                <br /><br />
-                <h2 class="font-weight-bold" style="color: #ffd700;">
-                  About
-                </h2>
-                <h2>
-                  <%=user.description%>
-                </h2>
-                <br /><br />
-                <h2 class="font-weight-bold" style="color: #ffd700;">
-                  Food Preferences
-                </h2>
+    <section id="profile-section">
+      <div
+        class="dark-overlay"
+        align="center"
+        style="padding-top: 75px; padding-bottom: 20px;"
+      >
+        <img class="user" src="<%= user.image %>" height="150" width="200" />
+        <h1 style="color: #ffd700;">
+          <%=user.firstName%> <%=user.lastName%>
+        </h1>
+        <h3
+          class="font-weight-italics"
+          style="padding-bottom: 20px; color: white;"
+        >
+          Email: <%= user.email %>
+        </h3>
 
-                <a
-                  type="button"
-                  href="/editpreferences"
-                  class="btn"
-                  style="
-                    background-color: green;
-                    color: white;
-                    font-weight: bold;
-                  "
-                >
-                  Edit Preferences
-                </a>
+        <h2 class="font-weight-bold" style="color: #ffd700;">
+          About
+        </h2>
+        <h2>
+          <%=user.description%>
+        </h2>
 
-                <!--
-                <div class="row">
-                  <div class="column" style="padding-left: 18px;">
-                    <p class="chips chips-close" data-initialized="true"></p>
-                  </div>
-                </div>
-                -->
+        <h2 class="font-weight-bold" style="padding-top: 20px; color: #ffd700;">
+          Food Preferences
+        </h2>
+        <a
+          type="button"
+          href="/editpreferences"
+          class="btn"
+          style="background-color: green; color: white; font-weight: bold;"
+        >
+          Edit Preferences
+        </a>
 
-                <!--<div
-                  id="container"
-                  class="cols"
-                  align="center"
-                  style="margin-left: -25px;"
-                >
-                  <% preferences.forEach(function(restaurant){ %>
-                  <div class="box">
-                    <img src="<%= restaurant.image %>" class="image" />
-                    <div class="name">
-                      <%= restaurant.name %>
-                    </div>
-                  </div>
-                  <% }); %>
-                </div>-->
-              </div>
-            </div>
-          </div>
-        </div>
+        <h2 class="font-weight-bold" style="padding-top: 20px; color: #ffd700;">
+          Account
+        </h2>
+        <a
+          class="btn btn-outline-light mx-2"
+          href="/editprofile/<%=currentUser._id%> "
+          role="button"
+        >
+          Edit Profile
+        </a>
+        <a
+          class="btn btn-outline-light mx-2"
+          href="/orderhistory"
+          role="button"
+        >
+          Order History
+        </a>
       </div>
-    </header>
-
+    </section>
     <!-- FOOTER -->
     <%- include("./partials/footer.ejs") %>
   </body>
